--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 ###< symfony/framework-bundle ###
 
 /docker/mysqldata
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
+
+/.idea
