--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,11 +22,14 @@ services:
             context: .
         volumes:
             - '../:/var/www/task1'
+            - './php.ini:/usr/local/etc/php/conf.d/php.ini'
 
     mysql:
         container_name: mysql
         image: mysql:8.0
         environment:
             MYSQL_ROOT_PASSWORD: root
+        ports:
+            - '3307:3306'
         volumes:
             - './mysqldata:/var/lib/mysql'
